update to 1.19